# syngen

./: .env.example  .gitignore  README.md  checkpoint_registry.py  gan_ae_backend.py  generator.py  gui_app.py  main.py  pyproject.toml  requirements-cpu.txt  requirements-dev.txt  requirements-gpu-cu128.txt  requirements.txt
.github/workflows/: ci.yml
checkpoints/: domain_training_reports.json  registry.json
configs/: train_balanced.json  train_fast.json  train_high_quality.json
docs/: ARCHITECTURE.md  BENCHMARK_RESULTS.md  KNOWN_LIMITATIONS.md  PUSH_CHECKLIST.md
gan_ae_full/: README.md  __init__.py  infer.py  models.py  preprocessing.py  train.py  trainer.py
gan_ae_full/data/: agriculture_train.csv  cybersecurity_train.csv  ecommerce_train.csv  education_train.csv  energy_train.csv  finance_train.csv  general_train.csv  government_train.csv  healthcare_train.csv  hospitality_train.csv  insurance_train.csv  logistics_train.csv  manufacturing_train.csv  media_train.csv  saas_train.csv  telecom_train.csv
kaggle_eval/: colab_gan_ae_validation.ipynb  run_kaggle_validation.py
prompt_parser/: __init__.py  domains.py  llm_parser.py  models.py  parse_router.py  parser.py
prompts/: prompts_that_wont_work.md  prompts_that_work.md
tests/: conftest.py  test_checkpoint_registry.py  test_generator.py  test_main_cli.py  test_parse_router.py  test_parser.py
